tests/suite/snapshots/suite__parse__tests__parse__bad_function.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/bad_function.xi:2:5]
   │
 2 │     return 1
   ·     ───┬──  
   ·        ╰──── Unexpected token
───╯

